# subset-struct

./: CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: deny_warnings.yml  rust_auto_format.yml
src/: lib.rs
tests/: subsets.rs
