[package]
name = "subset-struct"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Convenient and robust subset struct generation, for example for redacting a public API."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/subset-struct"
homepage = "https://github.com/Tamschi/subset-struct/tree/v0.0.1"
documentation = "https://docs.rs/subset-struct/0.0.1"
keywords = ["struct", "redact", "subset", "attribute"]
categories = ["rust-patterns", "no-std"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[lib]
proc-macro = true

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/subset-struct" }
is-it-maintained-open-issues = { repository = "Tamschi/subset-struct" }
maintenance = { status = "experimental" } # This may differ between branches.

[dependencies]
call2-for-syn = "2.0.3"
debugless-unwrap = "0.0.4"
proc-macro2 = "1.0.39"
quote = "1.0.9"
syn = "1.0.72"
tap = "1.0.1"

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
serde = { version = "1.0.127", features = ["derive"] }
version-sync = "0.9.1"
wasm-bindgen-test = "0.3.26"
